--- a/src/html/agreement.html
+++ b/src/html/agreement.html
@@ -115,10 +115,8 @@
     </p>
     <p >
       <span  
-        >1.2. O Acordo é um convite para fazer ofertas postadas no site da 24Pro
-        Trade que devem ser tratadas como uma oferta para entrar neste Acordo
-        nos termos nele estabelecidos. A oferta postada não é pública. A 24Pro
-        Trade, a seu exclusivo critério, pode se recusar a celebrar um Contrato
+        >1.2. O Acordo é um convite para fazer ofertas postadas no site da 24H Notícias que devem ser tratadas como uma oferta para entrar neste Acordo
+        nos termos nele estabelecidos. A oferta postada não é pública. A 24H Notícias, a seu exclusivo critério, pode se recusar a celebrar um Contrato
         com qualquer pessoa sem explicar os motivos da recusa ou, se o registro
         tiver ocorrido, rescindir as relações contratuais e bloquear o acesso ao
         terminal de negociação. O cadastro do Cliente no Site 24H Notícias ou no
@@ -182,8 +180,7 @@
         formas injustas e desonestas para realizar negociações (transações) com
         a 24H Notícias; o Cliente não usará informações privilegiadas ou
         confidenciais ou qualquer outra informação cujo uso possa beneficiar o
-        Cliente ao negociar com a 24H Notícias e/ou que possa prejudicar a 24Pro
-        Trade;</span
+        Cliente ao negociar com a 24H Notícias e/ou que possa prejudicar a 24H Notícias;</span
       >
     </p>
     <p ><br  /></p>
@@ -338,8 +335,7 @@
         assumir obrigações superiores ao valor da Negociação (a 24H Notícias não
         fornece alavancagem ao Cliente). A 24H Notícias e o Cliente negociam com
         uma opção Superior/Inferior - opção cujo nível alvo é igual ao preço do
-        ativo ou outro preço determinado pelo Cliente por sugestão da 24Pro
-        Trade no momento da negociação, cujo único pagamento é feito se
+        ativo ou outro preço determinado pelo Cliente por sugestão da 24H Notícias no momento da negociação, cujo único pagamento é feito se
         alteração de preço para cima foi selecionada e o preço do ativo era mais
         alto do que o nível-alvo quando a opção expirou ou se uma alteração de
         preço para baixo foi selecionada e o preço do ativo era inferior ao
@@ -515,7 +511,7 @@
     <p >
       <span  
         >3.4. O cliente também pode entrar em contato com a 24H Notícias por
-        e-mail em 24Protrade@outlook.com e outros endereços de e-mail e números
+        e-mail em service-24hour@outlook.com e outros endereços de e-mail e números
         de telefone listados neste Contrato e no site da 24H Notícias.</span
       >
     </p>
@@ -576,19 +572,16 @@
         >4.3. O Cliente deverá informar prontamente a 24H Notícias sobre
         alterações na identificação e informações de contato (em até 7 (sete)
         dias após tal alteração), efetuando as alterações necessárias no
-        Terminal de Negociação ou em qualquer outra forma oferecida pela 24Pro
-        Trade. A fim de identificar o Cliente e monitorar a origem dos recursos
+        Terminal de Negociação ou em qualquer outra forma oferecida pela 24H Notícias. A fim de identificar o Cliente e monitorar a origem dos recursos
         do Cliente a qualquer momento após o registro, a 24H Notícias reserva-se
         o direito de solicitar e o Cliente se compromete a fornecer, no prazo de
         7 (sete) dias após o recebimento da solicitação, quaisquer documentos de
         identificação (estes documentos incluir documentos de identidade;
         documentos que comprovem endereço residencial, documentos que indiquem a
-        capacidade financeira do Cliente e outros documentos a critério da 24Pro
-        Trade). A 24H Notícias reserva-se o direito de suspender transações não
+        capacidade financeira do Cliente e outros documentos a critério da 24H Notícias). A 24H Notícias reserva-se o direito de suspender transações não
         comerciais e/ou comerciais na conta do Cliente se verificar que as
         informações de identificação do Cliente estão incorretas ou imprecisas;
-        caso o Cliente não tenha fornecido os documentos solicitados, a 24Pro
-        Trade tem o direito de bloquear o acesso do Cliente ao terminal de
+        caso o Cliente não tenha fornecido os documentos solicitados, a 24H Notícias tem o direito de bloquear o acesso do Cliente ao terminal de
         negociação até que o procedimento de identificação do Cliente seja
         concluído. A 24H Notícias também tem o direito de exigir que o Cliente se
         submeta ao procedimento de identificação por meio de visita pessoal a um
@@ -624,8 +617,7 @@
     <p >
       <span  
         >4.4.3. Todas as ordens através do terminal de negociação com a senha do
-        Cliente serão consideradas feitas pelo Cliente, a menos que a 24Pro
-        Trade estabeleça o contrário.</span
+        Cliente serão consideradas feitas pelo Cliente, a menos que a 24H Notícias estabeleça o contrário.</span
       >
     </p>
     <p >
@@ -655,8 +647,7 @@
     <p >
       <span  
         >4.5. O próprio Cliente pode alterar a senha do terminal de negociação
-        ou usar o procedimento de recuperação de senha definido pela 24Pro
-        Trade.
+        ou usar o procedimento de recuperação de senha definido pela 24H Notícias.
       </span>
     </p>
     <p >
@@ -739,7 +730,7 @@
     <p >
       <span  
         >5.2.4. Reivindicações/reclamações/declarações/avisos podem ser enviados
-        por e-mail para support@24H Notícias.com por correio registrado ou
+        por e-mail para service-24hour@outlook.com por correio registrado ou
         certificado. Reivindicações/reclamações/declarações/notificações feitas
         e enviadas de outra forma não serão consideradas.</span
       >
@@ -773,8 +764,7 @@
         reivindicação/reclamação/declaração/notificação, a 24H Notícias pode
         solicitar documentos e informações adicionais do Cliente. Uma
         reivindicação/reclamação/declaração/aviso será analisada com base nos
-        dados fornecidos pelas entradas de log do servidor Cliente e 24Pro
-        Trade. As entradas de log do 24H Notícias Server sempre têm precedência
+        dados fornecidos pelas entradas de log do servidor Cliente e 24H Notícias. As entradas de log do 24H Notícias Server sempre têm precedência
         sobre outras evidências e provas. A 24H Notícias não assume nenhuma
         responsabilidade por negociações incompletas e não indenizará quaisquer
         danos financeiros ou danos morais sofridos pelo Cliente em conexão com o
@@ -859,8 +849,7 @@
     </p>
     <p >
       <span  
-        >b) submeter-se à jurisdição dos tribunais do país de registro da 24Pro
-        Trade;</span
+        >b) submeter-se à jurisdição dos tribunais do país de registro da 24H Notícias;</span
       >
     </p>
     <p >
@@ -1114,8 +1103,7 @@
         negociações do Cliente a qualquer momento, a seu critério; e deixar de
         prestar serviços ao Cliente e devolver recursos ao Cliente ou não, a seu
         critério. Qualquer violação dos termos listados nesta seção priva o
-        Cliente do direito de exigir pagamento ou reembolso da 24Pro
-        Trade.</span
+        Cliente do direito de exigir pagamento ou reembolso da 24H Notícias.</span
       >
     </p>
     <p >
@@ -1125,8 +1113,7 @@
       <span  
         >8.5.1. Se a 24H Notícias rescindir o Contrato com o Cliente por violação
         do Contrato, o Cliente não terá direito a abrir uma nova conta,
-        incluindo inserir dados de terceiros durante o registro. Caso a 24Pro
-        Trade detecte o descumprimento do Cliente conforme previsto nesta
+        incluindo inserir dados de terceiros durante o registro. Caso a 24H Notícias detecte o descumprimento do Cliente conforme previsto nesta
         cláusula, serão aplicadas as consequências previstas no item 8.5. do
         Acordo será aplicável.</span
       >
@@ -1302,7 +1289,7 @@
         Cliente não tenha obrigações não cumpridas decorrentes deste
         instrumento. O Cliente deverá enviar o Aviso de Rescisão para o endereço
         24H Notícias fornecido na cláusula 1.1. deste Acordo, ou para o endereço
-        de e-mail support@24H Notícias.com.</span
+        de e-mail service-24hour@outlook.com.</span
       >
     </p>
     <p >
@@ -1374,8 +1361,7 @@
     </p>
     <p >
       <span  
-        >10.5. O Cliente (individual) que forneça os seus dados pessoais à 24Pro
-        Trade de qualquer forma e de qualquer forma (realizando quaisquer ações
+        >10.5. O Cliente (individual) que forneça os seus dados pessoais à 24H Notícias de qualquer forma e de qualquer forma (realizando quaisquer ações
         no site da 24H Notícias, através das contrapartes da 24H Notícias, etc.)
         automatizado dos seus dados pessoais para efeitos do cumprimento do
         presente Acordo, implementando campanhas publicitárias, fornecendo-lhe
@@ -1436,8 +1422,7 @@
       <span  
         >10.8. O Cliente não tem o direito de ceder seus próprios direitos,
         impor suas próprias obrigações ou transferir direitos ou obrigações de
-        qualquer outra forma sem o consentimento prévio por escrito da 24Pro
-        Trade. Se esta condição for violada, qualquer cessão, cobrança ou
+        qualquer outra forma sem o consentimento prévio por escrito da 24H Notícias. Se esta condição for violada, qualquer cessão, cobrança ou
         transferência será nula e sem efeito.</span
       >
     </p>
@@ -1451,8 +1436,7 @@
         uma transação na plataforma de negociação ou no Painel ou um benefício
         material, relacionamento legal ou acordo que esteja em conflito com os
         interesses do Cliente. Por exemplo, a 24H Notícias pode: a) atuar como
-        contraparte em relação a qualquer ativo; b) sugerir outro parceiro 24Pro
-        Trade como contraparte para uma operação de negociação; c) dar
+        contraparte em relação a qualquer ativo; b) sugerir outro parceiro 24H Notícias como contraparte para uma operação de negociação; c) dar
         recomendações e prestar serviços a seus parceiros ou outros clientes da
         24H Notícias em relação aos ativos de seu interesse, ainda que conflitem
         com os interesses do Cliente.</span
@@ -1621,8 +1605,7 @@
     <p ><br  /></p>
     <p >
       <span  
-        >11.2.4. ter um número de telefone com o código do país no qual a 24Pro
-        Trade não faz negócios; ter um endereço IP associado a um país no qual a
+        >11.2.4. ter um número de telefone com o código do país no qual a 24H Notícias não faz negócios; ter um endereço IP associado a um país no qual a
         24H Notícias não faz negócios;</span
       >
     </p>
